<resources>
    <string name="app_name">YourNight1.0</string>}
    <string name="correo">Ingrese su correo</string>
    <string name="contrasnia">Ingrese su contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia2">Reingrese Contraseña</string>
    <string name="tittle_activity_olvidar_cuenta">Olvidarcuenta</string>
    <string name="btnEntrar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="registrate">Crear cuenta</string>
    <string name="btnInformacion">Informacion</string>
    <string name="btnPerfil">Perfil</string>
    <string name="btnReservas">Reservas</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnConfiguracion">Configuracion</string>
    <string name="btncerrarsesion">Cerrar sesion</string>

    <string name="btnCargarimage">Cargar foto de perfil</string>

    <string name="recuerdane">Recordar sesion</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="Nobinario">No binario</string>
    <string name="rgsexo">Seleccione su sexo</string>
    <string name="abrir_drawer">Abierto</string>
    <string name="cerrar_drawer">Cerrado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>